Fix: cloud elements bleeding out of component

--- a/src/App/components/Sections/Services/Services.scss
+++ b/src/App/components/Sections/Services/Services.scss
@@ -1,6 +1,7 @@
 @import "../../../../index.scss";
 
 #services {
+  overflow: hidden;
 
   .section-title {
     font-size: 3.1rem;
